fix the alignment

--- a/src/Stepper.css
+++ b/src/Stepper.css
@@ -16,14 +16,12 @@
   margin-bottom: 40px;
   position: relative;
   gap: 10px;
-  width: 100%;
+  width: calc(100% - 58px);
   padding: 0;
   box-sizing: border-box;
   min-width: 0;
   margin-left: 0;
-  margin-right: 0;
-  padding-left: 29px;
-  padding-right: 29px;
+  margin-right: auto;
 }
 
 .step-wrapper {
@@ -94,8 +92,7 @@
   position: absolute;
   top: 60px;
   left: calc(50% + 60px);
-  right: 29px;
-  width: calc(100% - 120px - 58px);
+  width: calc(100% - 120px);
   height: 3px;
   background-color: #e0e0e0;
   z-index: 1;
@@ -107,10 +104,10 @@
 }
 
 .step-content {
-  width: 100%;
+  width: 80%;
   text-align: center;
-  margin: 40px 0;
-  padding: 30px 26px;
+  margin: 40px auto 40px 15%;
+  padding: 30px;
   background-color: #f5f5f5;
   border-radius: 8px;
   min-height: 100px;
@@ -119,8 +116,6 @@
   justify-content: center;
   box-sizing: border-box;
   min-width: 0;
-  margin-left: 0;
-  margin-right: 0;
 }
 
 .step-content h2 {
